_u logic for filelisting

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <p>Please navigate to: <code>%USERPROFILE%\AppData\LocalLow\Eleventh Hour Games\Last Epoch\Saves</code></p>
   <input type="file" id="folderInput" webkitdirectory directory multiple>
   <h2>File List</h2>
-  <div id="fileColumns" style="display: flex; gap: 1rem;">
+  <div id="fileColumns">
     <div id="charList" style="flex: 1; border: 1px solid #ccc; padding: 1rem;">Character List</div>
-    <div id="storageList" style="flex: 1; border: 1px solid #ccc; padding: 1rem;">Storage</div>
+    <div id="storageList" style="display: flex; flex-direction: column; flex: 1; border: 1px solid #ccc; padding: 1rem;">Storage</div>
     <div id="column3" style="flex: 1; border: 1px solid #ccc; padding: 1rem;">Other</div>
   </div>
   <h2>Decompiled JSON</h2>
