--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Last Epoch Save Viewer</title>
+  <link rel="icon" type="image/x-icon" href="https://lastepoch.com/favicon.ico">
+  <title>LES</title>
   <link rel="stylesheet" href="styles/dark-theme.css">
 </head>
 
@@ -11,9 +12,9 @@
   <input type="file" id="folderInput" webkitdirectory directory multiple>
   <h2>File List</h2>
   <div id="fileColumns">
-    <div id="charList" style="flex: 1; border: 1px solid #ccc; padding: 1rem;">Character List</div>
-    <div id="storageList" style="display: flex; flex-direction: column; flex: 1; border: 1px solid #ccc; padding: 1rem;">Storage</div>
-    <div id="column3" style="flex: 1; border: 1px solid #ccc; padding: 1rem;">Other</div>
+    <div id="charList" style="flex: 1; border: 1px solid #ccc; padding: 1rem;">Nothing Loaded</div>
+    <div id="storageList" style="display: flex; flex-direction: column; flex: 1; border: 1px solid #ccc; padding: 1rem;">Nothing Loaded</div>
+    <div id="generalList" style="flex: 1; border: 1px solid #ccc; padding: 1rem;">Other</div>
   </div>
   <h2>Decompiled JSON</h2>
   <div id="jsonViewer" class="json-viewer"></div>
